HW14/E-5.2.100-BitWiseAndTM/wdir_msg/compile.err

./Tape.java:53: error: missing return statement
    }
    ^
Note: TuringMachine.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error


